# simple_shop

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  magazyn.txt  program.out  readme.txt
include/: jacket.hpp  menu.hpp  product.hpp  produkt.hpp  shoes.hpp  shop.hpp  tshirt.hpp  underwear.hpp
src/: jacket.cpp  main.cpp  menu.cpp  product.cpp  shoes.cpp  shop.cpp  tshirt.cpp  underwear.cpp
